<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.UpdateNameActivity"
    android:orientation="vertical"
    android:paddingLeft="@dimen/size_15"
    android:paddingRight="@dimen/size_15">

    <ImageView
        android:layout_width="@dimen/size_135"
        android:layout_height="@dimen/size_135"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/success" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/size_15"
        android:text="@string/text_update_name_info"
        android:textColor="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_name_edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_account_circle"
        android:hint="@string/text_first_name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_name_edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_account_circle"
        android:hint="@string/text_last_name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_name_button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        android:padding="@dimen/size_10"
        android:text="@string/text_update"
        android:textColor="@color/colorBlack"
        app:iconTint="@color/colorBlack"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textEnd" />

</LinearLayout>