<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.UpdateProfileImageActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/update_profile_image_circular_image_profile_image"
        android:layout_width="@dimen/size_135"
        android:layout_height="@dimen/size_135"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20"
        android:contentDescription="@string/app_name"
        android:src="@drawable/boy_image"
        app:civ_border_width="@dimen/size_2"
        app:civ_border_color="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/size_15"
        android:text="@string/text_update_image_info"
        android:textColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_profile_image_material_button_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:padding="@dimen/size_5"
        android:text="@string/text_select_image"
        app:icon="@drawable/ic_image"
        android:textColor="@color/colorBlack"
        app:iconTint="@color/colorBlack"
        app:iconGravity="textEnd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_profile_image_material_button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        android:padding="@dimen/size_10"
        android:text="@string/text_update"
        android:textColor="@color/colorBlack"
        app:iconTint="@color/colorBlack"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textEnd" />

</LinearLayout>